--- a/pB/subtasks.json
+++ b/pB/subtasks.json
@@ -9,9 +9,21 @@
             "text": "範例輸入輸出",
             "validators": []
         },
+        "brute": {
+            "index": 0,
+            "score": 17,
+            "text": "$1 \le Q \le 10^3$",
+            "validators": [validator-brute.cpp]
+        },
+        "logs": {
+            "index": 0,
+            "score": 43,
+            "text": "$1 \le Q \le 10^5$",
+            "validators": [validator-logs.cpp]
+        },
         "full": {
             "index": 1,
-            "score": 100,
+            "score": 40,
             "text": "無額外限制",
             "validators": []
         }
