Try to fix cannot build tests

--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -25,7 +25,8 @@ on:
 
 jobs:
   run:
-    uses: TNFSH-Programming-Contest/tps-actions/.github/workflows/build-tests.yml@main
+    # uses: TNFSH-Programming-Contest/tps-actions/.github/workflows/build-tests.yml@main
+    uses: tobiichi3227/tps-actions/.github/workflows/build-tests.yml@main
     with:
       input: ${{ github.event.inputs.input }}
       output: ${{ github.event.inputs.output }}
