--- a/pD/subtasks.json
+++ b/pD/subtasks.json
@@ -9,9 +9,15 @@
             "text": "範例輸入輸出",
             "validators": []
         },
-        "full": {
+        "brute": {
             "index": 1,
-            "score": 100,
+            "score": 21,
+            "text": "$1 \\le Q \\le 100$",
+            "validators": []
+        },
+        "full": {
+            "index": 2,
+            "score": 79,
             "text": "無額外限制",
             "validators": []
         }
