--- a/pD/subtasks.json
+++ b/pD/subtasks.json
@@ -9,14 +9,20 @@
             "text": "範例輸入輸出",
             "validators": []
         },
-        "brute": {
+        "brute-1": {
             "index": 1,
-            "score": 21,
-            "text": "$1 \\le Q \\le 100$",
+            "score": 10,
+            "text": "$1 \\le Q \\le 100$, $1 \\le M \\le 8$",
+            "validators": []
+        },
+        "brute-2": {
+            "index": 2,
+            "score": 11,
+            "text": "$1 \\le Q \\le 1000$",
             "validators": []
         },
         "full": {
-            "index": 2,
+            "index": 3,
             "score": 79,
             "text": "無額外限制",
             "validators": []
