--- a/pA/subtasks.json
+++ b/pA/subtasks.json
@@ -3,8 +3,14 @@
         "validator.cpp"
     ],
     "subtasks": {
-        "full": {
+        "samples": {
             "index": 0,
+            "score": 0,
+            "text": "範例測資",
+            "validators": []
+        },
+        "full": {
+            "index": 1,
             "score": 100,
             "text": "無額外限制",
             "validators": []
