Test own action runner

--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -31,3 +31,4 @@ jobs:
       input: ${{ github.event.inputs.input }}
       output: ${{ github.event.inputs.output }}
       solutions: ${{ github.event.inputs.solutions }}
+      runs-on: 'self-hosted'
