fix stupid syntax error

--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -31,4 +31,4 @@ jobs:
     with:
       problems: ${{ inputs.problems }}
       merge: ${{ inputs.merge && fromJson(inputs.merge) || false }}
-      runs-on: 'self-hosted'runs-on: 'self-hosted'
+      runs-on: 'self-hosted'
